# BusPirate5-firmware

./: .clang-format  .clang-format_files  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  Doxyfile  LIBRARY_INTEGRATION_PLAN.md  LICENSE.TXT  adc.c  adc.h  amux.c  amux.h  ansi_colours_import.cmake  apa102.c  apa102.pio  auxpinfunc.c  auxpinfunc.h  bio.c  bpio.fbs  buf.c  buf.h  buttons.c  buttons.h  bytecode.h  check_translations.py  check_translations_README.md  command_attributes.h  commands.c  commands.h  core1.c  core1.h  debug.c  debug.h  displays.c  displays.h  docker-compose.yml  dummy.c  dummy.h  (+58 more)
src/: CMakeLists.txt  bpio.fbs  bpio_builder.h  bpio_reader.h  bpio_verifier.h  builder.c  bytecode.h  command_attributes.h  command_struct.h  commands.c  commands.h  debug.c  debug_rtt.c  debug_rtt.h  debug_uart.c  debug_uart.h  displays.c  displays.h  flatbuffers_common_builder.h  mbedtls_config.h  modes.c  modes.h  monster_builder.h  monster_reader.h  monster_verifier.h  msc_disk.c  msc_disk.h  pio_config.h  pirate.c  pirate.h  psram.c  psram.h  queue.c  queue.h  spsc_queue.h  syntax.c  syntax.h  syntax_compile.c  syntax_internal.h  syntax_post.c  (+13 more)
src/binmode/: binio.c  binio_helpers.c  binio_helpers.h  binmodes.c  binmodes.h  bpio.c  bpio.h  bpio_1wire.c  bpio_1wire.h  bpio_2wire.c  bpio_2wire.h  bpio_3wire.c  bpio_3wire.h  bpio_dio.c  bpio_dio.h  bpio_hiz.c  bpio_hiz.h  bpio_i2c.c  bpio_i2c.h  bpio_infrared.c  bpio_infrared.h  bpio_led.c  bpio_led.h  bpio_spi.c  bpio_spi.h  bpio_transactions.c  bpio_transactions.h  bpio_uart.c  bpio_uart.h  dirtyproto.c  fala.c  fala.h  falaio.c  falaio.h  irtoy-air.c  irtoy-air.h  irtoy-irman.c  irtoy-irman.h  legacy4third.c  legacy4third.h  (+5 more)
src/boards/: buspirate5.h  buspirate6.h  buspirate7.h  memmap_default_rp2040.ld  memmap_default_rp2350.ld  memmap_psram_rp2350.ld
src/commands/1wire/: demos.c  demos.h  scan.c  scan.h
src/commands/2wire/: hw2w_sniff.c  hw2w_sniff.h  sle4442.c  sle4442.h
src/commands/eeprom/: eeprom_1wire.c  eeprom_1wire.h  eeprom_base.c  eeprom_base.h  eeprom_i2c.c  eeprom_i2c.h  eeprom_i2c_gui.c  eeprom_i2c_gui.h  eeprom_spi.c  eeprom_spi.h
src/commands/global/: a_auxio.c  a_auxio.h  bricks.c  bricks.h  bug.c  bug.h  button_scr.c  button_scr.h  cert.c  cert.h  cls.c  cls.h  cmd_binmode.c  cmd_binmode.h  cmd_convert.c  cmd_convert.h  cmd_mcu.c  cmd_mcu.h  cmd_otp.c  cmd_selftest.c  cmd_selftest.h  cmd_toolbar.c  cmd_toolbar.h  crossflash.c  crossflash.h  cryptocrack.c  cryptocrack.h  disk.c  disk.h  drop4.c  drop4.h  dummy.c  dummy.h  dump.c  dump.h  edit.c  edit.h  flat.c  flat.h  fleet.c  (+81 more)
src/commands/hdplxuart/: bridge.c  bridge.h
src/commands/i2c/: ddr.c  ddr.h  ddr4.c  ddr4.h  ddr5.c  ddr5.h  demos.c  demos.h  eeprom.c  eeprom.h  i2c.c  i2c.h  mpu6050.c  mpu6050.h  scan.c  scan.h  sniff.c  sniff.h  sniff.md  usbpd.c  usbpd.h  usbpdo.c  usbpdo.h
src/commands/i2s/: sine.c  sine.h  wav.c  wav.h
src/commands/infrared/: irtxrx.c  irtxrx.h  tvbgone-codes.h  tvbgone.c  tvbgone.h
src/commands/jtag/: bluetag.c  bluetag.h
src/commands/spi/: eeprom.c  eeprom.h  eeprom_i2c.c  flash.c  flash.h  slave.c  slave.h  sniff.c  sniff.h  zip.c  (+11 more)
src/deprecated/: bp_args.c  bp_args.h  bp_args_compat.c  bp_args_compat.h  bp_linenoise.c  bp_linenoise.h  queue.c  queue.h  syntax.c  ui_format.c  ui_format_old.h  ui_parse.c
src/display/: background.h  background_image_v4-orig.h  default.c  default.h  disabled.c  disabled.h  robot16.h  robot7x16.h  scope.c  scope.h
src/fatfs/: diskio.c  diskio.h  ff.c  ffsystem.c
src/flatcc/: list.py
src/font/: font.h  hunter-14pt-19h15w.h  hunter-23pt-24h24w.h
src/mjson/: mjson.c
src/mode/: HD44780.c  HD44780.h  LCDSPI.h  ST7735.c  ST7735.h  SW2W.h  SW3W.c  SW3W.h  SWI2C.h  binloopback.c  binloopback.h  dio.c  dio.h  dummy1.c  dummy1.h  hiz.c  hiz.h  hw1wire.c  hw1wire.h  hw2wire.c  hw2wire.h  hw3wire.c  hw3wire.h  hwhduart.c  hwhduart.h  hwi2c.c  hwi2c.h  hwled.c  hwled.h  hwspi.c  hwspi.h  hwuart.c  hwuart.h  i2s.c  i2s.h  i2s_in.pio  i2s_out.pio  infrared-struct.h  infrared.c  infrared.h  (+15 more)
src/nand/: LICENSE  README.md  nand_ftl_diskio.c  spi.c  spi_nand.c  spi_nand.h
src/nand-old/: nand_ftl_diskio.h
src/nand2/: main.c  nand_ftl_diskio.c
src/otp/: bp_otp.h  bp_otp_rw.c  bp_whitelabel.c  otp_ecc.c
src/pirate/: amux.c  amux.h  bio.c  bio.h  button.c  button.h  file.c  file.h  hardfault.c  hw1wire.pio  hw1wire_pio.c  hw1wire_pio.h  hw2wire.pio  hw2wire_pio.c  hw2wire_pio.h  hw3wire.pio  hw3wire_pio.c  hw3wire_pio.h  hwi2c.pio  hwi2c_pio.c  hwi2c_pio.h  hwspi.c  hwspi.h  hwuart.pio  hwuart_pio.c  hwuart_pio.h  intercore_helpers.h  ioexpander.c  ioexpander.h  irio.pio  irio_pio.c  irio_pio.h  lcd.c  lcd.h  lsb.c  lsb.h  mcu.c  mcu.h  mem.c  mem.h  (+19 more)
src/platform/: bpi-rev10.h  bpi-rev8.h  bpi-rev9.c  bpi-rev9.h  bpi5-rev10.c  bpi5-rev10.h  bpi5-rev8.c  bpi5-rev8.h  bpi5-rev9.c  bpi5-rev9.h  bpi5xl-rev0.c  bpi5xl-rev0.h  bpi6-rev1.h  bpi6-rev2.c  bpi6-rev2.h  bpi7-rev0.c  bpi7-rev0.h  bpi7-rev1.c  bpi7-rev1.h  bpi7-rev2.c  bpi7-rev2.h
src/printf-4.0.0/: printf.c
src/pubkey/: README.md  pubkey.c  pubkey.h  server_pubkey.pem
src/sparkfun_pico/: CMakeLists.txt  sfe_pico.h  sfe_pico_alloc.c  sfe_pico_boards.h
src/toolbars/: logic_bar.c  logic_bar.h  pin_watcher.c  pin_watcher.h  sys_stats.c  sys_stats.h
src/translation/: base.c  base.h  base.ht  bs-ba.h  bs-ba.json  en-us.h  en-us.json  format_specifier_history.txt  it-it.h  it-it.json  json2h.bat  json2h.py  pl-pl.h  pl-pl.json  proposed_positional_descriptions.txt  zh-cn.h  zh-cn.json
src/ui/: ui_app.c  ui_app.h  ui_button.c  ui_button.h  ui_cmd_menu.c  ui_cmd_menu.h  ui_cmdln.c  ui_cmdln.h  ui_command.h  ui_config.c  ui_config_bar.c  ui_config_bar.h  ui_const.c  ui_const.h  ui_display.c  ui_display.h  ui_file_picker.c  ui_file_picker.h  ui_flags.h  ui_format.c  ui_format.h  ui_help.c  ui_help.h  ui_hex.c  ui_hex.h  ui_info.c  ui_info.h  ui_init.c  ui_init.h  ui_lcd.c  ui_lcd.h  ui_mem_gui.c  ui_mem_gui.h  ui_mode.c  ui_mode.h  ui_parse.c  ui_parse.h  ui_pin_render.c  ui_pin_render.h  ui_popup.c  (+15 more)
(+824 files in other folders)
